--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Pakhi and I'm a <span class="typing-2"></span></div>
-                    <p>Second year CSE Undergrad from Jaypee University of Engineering and Technology.
-                        I have worked on Front-end which includes HTML,CSS and Javascript.
-                        Also I have command on languages such as C , C++ and beginner at Python.
-                        Apart from studies I do Graphic Designing and have knowledge of Adobe Photoshop & Adobe Illustrator.
-                        I can work on SQL too.</p>
+                    <p> Welcome to my mini portfolio website! My name is Pakhi Vashishth. I
+                        am a Front-end Developer and UI/UX Designer
+                        currently based in India. I am currently studying in Jaypee
+                        University of Engineering and Technology, Guna. I have interests
+                        in the fields of Web and Mobile Applications Development,
+                        CyberSecurity and Blockchain based Development.</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
@@ -76,15 +77,15 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Can Develope and Desgin websites of any type.Using HTML,CSS & JavaScript.</p>
+                        <div class="text">Web Developer</div>
+                        <p>Can Develop and Desgin websites using HTML, CSS, JavaScript, React & Nodejs.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Graphic Designing</div>
-                        <p>Can create logo's , Banners & templates of any type. Perform editing skills too.</p>
+                        <p>Can create logo's , prototyping websites of any type. Perform editing skills too.</p>
                     </div>
                 </div>
                </div>
@@ -99,7 +100,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Front end web designer/developer skilled in HTML, CSS, JavaScript. Coding on programming languages like C,C++ & beginner at Python. Can Design logo's , templates and do editing on Adobe photoshop and Illustration. Create tables on SQL. </p>
+                    <p>Front end designer/developer skilled in HTML, CSS, JavaScript, React. Coding on programming languages like C,C++ & beginner at Python. Design prototyping websites. </p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -133,14 +134,14 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MySQL</span>
+                            <span>Python</span>
                             <span>70%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Adobe Photoshop</span>
+                            <span>Figma</span>
                             <span>80%</span>
                         </div>
                         <div class="line photoshop"></div>
