--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
+                <div class="text-1"><span class="type"></span>,my name is</div>
                 <div class="text-2">Pakhi Vashishth</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#">Hire me</a>
@@ -52,7 +52,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="image.jpg" alt="">
+                    <img src="new.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Pakhi and I'm a <span class="typing-2"></span></div>
